# napari-hsi-phasor

./: Code_of_Conduct.md  LICENSE  README.md  setup.cfg  tox.ini
src/napari_hsi/: __init__.py  _plotter.py  _widget.py  hsi_visual.py  hsitools.py  napari.yaml
src/napari_hsi/_tests/: test_sample_data.py  test_writer.py
src/napari_hsi_phasor/: __init__.py  _plotter.py  _widget.py  hsitools.py  napari.yaml
src/napari_hsi_phasor/_tests/: test_reader.py  test_widget.py
